RESOLVED FIXED39765
[Qt] ScrollbarQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39765
Summary [Qt] ScrollbarQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:28:47 PDT
WebCore/platform/qt/ScrollbarQt.cpp:33: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ScrollbarQt.cpp:43: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 1 files
Attachments
Patch that fixes the coding style issues (1.12 KB, patch)
2010-05-26 14:35 PDT, Anders Bakken
no flags
Patch (1.17 KB, patch)
2010-06-04 18:45 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:35:58 PDT
Created attachment 57145 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:43:59 PDT
QtTriaged
David Levin
Comment 3 2010-05-27 11:19:57 PDT
Comment on attachment 57145 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
Anders Bakken
Comment 4 2010-06-04 18:45:21 PDT
WebKit Commit Bot
Comment 5 2010-06-05 00:52:33 PDT
Comment on attachment 57940 [details] Patch Clearing flags on attachment: 57940 Committed r60741: <http://trac.webkit.org/changeset/60741>
WebKit Commit Bot
Comment 6 2010-06-05 00:52:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.