2010-06-05  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        [Qt] ScrollbarQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39765

        * platform/qt/ScrollbarQt.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@60741 bbb929c8-8fbe-4397-9dbb-9b2b20218538